# tsukai-manifest

./: ARCHITECTURE.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  publish.yml  release-plz.yml  release.yml
crates/tsukai-manifest/: CHANGELOG.md  Cargo.toml  README.md
crates/tsukai-manifest-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/tsukai-manifest-cli/src/: main.rs
crates/tsukai-manifest-cli/tests/: cli.rs
crates/tsukai-manifest/src/: lib.rs  manifest.rs  projection.rs  schema.rs  validation.rs
crates/tsukai-manifest/tests/: example_mx_kv.rs  pathway_hostile.rs  projection.rs  schema_roundtrip.rs  schema_staleness.rs
examples/: mx-kv.json
schemas/: manifest.v1.json
