[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/coryzibell/tsukai-manifest"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
semver = { version = "1", features = ["serde"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
