[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukai-mcp/tsukai-manifest"
authors = ["Cory Zibell <cory@zibell.cloud>"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["semver1"] }
semver = { version = "1", features = ["serde"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
