[package]
name = "tsukai-manifest-cli"
version = "0.2.1"
description = "CLI for the tsukai manifest format — validate, project (Tier 0/1/2), and generate the JSON schema."
keywords = ["manifest", "cli", "codegen", "config", "tsukai"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "tsukai-manifest"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
tsukai-manifest = { path = "../tsukai-manifest", version = "0.2" }
